3.5/mule-user-guide/rss-module-reference.adoc
= RSS Module Reference

The Mule RSS support makes it possible to integrate easily with RSS feeds via the http://java.net/projects/rome/pages/Home[Rome] project.

== Consuming Feeds
////
3.2 version

[WARNING]
The use of RSS endpoints is deprecated. RSS endpoints were removed in Mule 3.2.0. Use the approach described in the Mixing HTTP and RSS Endpoints section.
////

One of the most common patterns is for integrating with RSS is polling for feed updates. With Mule this can be done easily. You must first write your class which receives an RSS Syndication Entry:

*EntryReceiver.java*

[source]
----
package org.mule.module.rss;

import com.sun.syndication.feed.synd.SyndEntry;

public class EntryReceiver
{
    public void readEntry(@Payload SyndEntry entry) throws Exception
    {
        //do stuff
    }
}
----

By default the RSS feed is split into entries for you, so for each entry, the component method invokes with the next entry in the feed. Flow configuration:

[source]
----
<flow name="eventConsumer">
    <rss:inbound-endpoint address="http://localhost:9002/events"/>
    <component class="org.mule.module.rss.EntryReceiver"/>
</flow>
----


== ETags

The Atom HTTP endpoint respects ETags and the 304 Not Modified response code by default, so you don't need to worry about consuming unnecessary updates.

=== Accessing the Feed Itself

If you want access to the feed itself, it is available via a header on the current message called 'feed.object'. You could have this injected into your entry point method using annotations -

*EntryReceiver.java*
[source]
----
public void processEntry(@Payload Entry entry, @Expr("#[header:invocation:feed.object]") Feed feed) throws Exception
----

////
3.2 version
[TIP]
The @Expr annotation is only available in the Mule Community Edition.
////

If you want to process the Feed in its entirety (not have it split into Entry objects) you can set the following flag on the endpoint:

[source]
----
<rss:inbound-endpoint address="http://localhost:9002/events" splitFeed="false/>
----

Now your component invokes once for each feed change no matter how many entries are added or updated. The method for your component should expect a `com.sun.syndication.feed.synd.SyndFeed` object or just a `org.w3c.dom.Document` if you want to process the XML model or even an `java.io.InputStream` or `java.lang.String` to get a raw representation.

*FeedReceiver.java*
[source]
----
public void processFeed(@Payload SyndFeed feed) throws Exception
{
    //do stuff
}
----

== Mixing HTTP and RSS endpoints

The `rss:endpoint` elements are a shortcut for creating a polling http endpoint and splitting a feed. If you are using another non-polling HTTP endpoint in your configuration, configure a HTTP polling endpoint as well, and reference it on your Atom endpoint.

[source]
----
<http:connector name="HttpConnector"/>

<http:polling-connector name="PollingHttpConnector" pollingFrequency="1000" discardEmptyContent="false"/>

<flow name="eventConsumer">
    <http:inbound-endpoint address="http://localhost:9002/events" connector-ref="PollingHttpConnector"/>
    <component class="org.mule.module.rss.EntryReceiver"/>
</flow>
----

== Accessing Feeds over Other Protocols

You can process feeds and process them using other Mule connectors such as JMS, File or XMPP. To do this, the Atom feed needs to be served over the connector, an RSS document is sent over JMS or polled from a file. The RSS schema defines a `<rss:feed-splitter/>` that can split messages received from an endpoint.

=== Over JMS

[source]
----
<flow name="feedSplitterConsumer">
    <jms:inbound-endpoint queue="feed.in">
        <rss:feed-splitter/>
    </jms:inbound-endpoint>

    <component class="org.mule.module.atom.event.EntryReceiver"/>
</flow>
----

=== Over a File

[source]
----
<flow name="feedSplitterConsumer">
    <file:inbound-endpoint  path="${mule.working.dir}" pollingFrequency="1000" >
        <file:filename-wildcard-filter pattern="*.rss"/>
        <rss:feed-splitter/>
    </file:inbound-endpoint>

    <component class="org.mule.module.atom.event.EntryReceiver"/>
</flow>
----

=== Processing Feeds Without the RSS Endpoint

For reference the follow example shows the explicit configuration for reading an Atom feed without using the `rss:endpoint`.

[source]
----
<http:polling-connector name="PollingHttpConnector" pollingFrequency="1000" discardEmptyContent="false"/>

<flow name="feedConsumer">
    <http:inbound-endpoint address="http://rossmason.blogspot.com/feeds/posts/default" connector-ref="PollingHttpConnector">
        <rss:feed-splitter/>
        <rss:entry-last-updated-filter/>
    </http:inbound-endpoint>

    <component class="org.mule.module.rss.EntryReceiver"/>
</flow>
----

The `rss:entry-last-updated-filter` comes after the `<rss:feed-splitter/>` because you need to split the feeds so that the filter can process them. Also we do not set a `lastUpdate` date on the filter, which implies the default behavior that all available entries are read, and then only new entries since the last read are processed.

////
3.2 version
== Schema Reference

* Schema: http://www.mulesoft.org/schema/mule/atom/3.2/mule-rss.xsd
* Structure: http://www.mulesoft.org/docs/site/3.2.0/schemadocs/schemas/mule-rss_xsd/schema-overview.html

=== Elements
////

=== Configuration Reference

== RSS Module

RSS is a popular syndication format used by many websites to provide a feed of data such as news or updates.

==== Transformers

These are transformers specific to this transport. Note that these are added automatically to the Mule registry at start up. When doing automatic transformations these will be included when searching for the correct transformers.

[column=",",options="header",]
|===
|Name |Description
|object-to-feed-transformer |Transforms the payload of the message to a `com.sun.syndication.feed.synd.SyndFeed` instance.
|===

==== Filters

Filters can be used to control which data is allowed to continue in the flow.

[column=",",options="header",]
|===
|Name |Description
|entry-last-updated-filter |Will filter RSS entry objects based on their last update date. This is useful for filtering older entries from the feed. This filter works only on RSS SyndEntry objects not SyndFeed objects.
|feed-last-updated-filter |Will filter the whole RSS Feed based on its last update date. This is useful for processing a feed that has not been updated since a specific date. This filter works only on RSS SyndFeed objects.
|===

== Feed splitter

Will split the entries of a feed into single entry objects. Each entry will be a separate message in Mule.

=== Child Elements of <feed-splitter...>

[width="100%",col="33%,33%,34%",options="header",]
|===
|Name	|Cardinality	|Description
|===

////
3.2 version

== Entry last updated filter

Will filter RSS entry objects based on their last update date. This is useful for filtering older entries from the feed. This filter works only on RSS SyndEntry objects not SyndFeed objects.

=== Attributes of <entry-last-updated-filter...>

[width="100%",col="20%,20%,20%,20%,20%,",options="header",]
|===
|Name	|Type |Required |Default |Description
|lastUpdate |string |no | |The date from which to filter events from. Any entries that were last updated before this date will not be accepted. The date format is: yyyy-MM-dd hh:mm:ss, for example 2008-12-25 13:00:00. If only the date is important you can omit the time part. You can set the value to 'now' to set the date and time that the server is started. Do not set this attribute if you want to receive all available entries then any new entries going forward. This is the default behaviour and suitable for many scenarios.
|acceptWithoutUpdateDate |boolean |no |true |Whether an entry should be accepted if it doesn't have a Last Update date set.
|===

=== Child Elements of <entry-last-updated-filter...>

[width="100%",col="33%,33%,34%",options="header",]
|===
|Name	|Cardinality	|Description
|===

== Object to feed transformer

Transforms the payload of the message to a com.sun.syndication.feed.synd.SyndFeed instance.

=== Child Elements of <object-to-feed-transformer...>

[width="100%",col="33%,33%,34%",options="header",]
|===
|Name	|Cardinality	|Description
|===
////
